UPS-2473: Add possible sort parameter to activities call
